Bug 144008 - LO crashes when macro tries to start a form document in Base (kf5 only)
Summary: LO crashes when macro tries to start a form document in Base (kf5 only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2021-08-22 17:21 UTC by Robert Großkopf
Modified: 2021-09-08 17:33 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Open the database with macros enabled. A messagebox with content and a form should appear. (44.45 KB, application/vnd.oasis.opendocument.database)
2021-08-22 17:21 UTC, Robert Großkopf
Details
bt with debug symbols (2.14 KB, text/plain)
2021-08-22 21:28 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2021-08-22 17:21:30 UTC
Created attachment 174477 [details]
Open the database with macros enabled. A messagebox with content and a form should appear.

For reproducing this bug you have to open the attached database with macros enabled.
Open the database file.
A messagebox (msgbox) appears - without content, without button OK.
Close the messagebox.
LO crashes immediately.

Open the file in any version up to LO 7.1.5.2.
The messagebox will appear with content and button OK.
Pressing OK and a form will be opened.

The first described buggy behavior appears with LO 7.2.0.4, not with older version up to LO 7.1.5.2 on OpenSuSE 15.2 64bit rpm Linux.
Comment 1 Julien Nabet 2021-08-22 21:28:40 UTC
Created attachment 174481 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this but only with kf5 rendering, not with gtk3 or gen rendering.
Comment 2 Julien Nabet 2021-08-22 21:31:27 UTC
Michael: since it's specific to kf5, thought you might be interested in this one.
Comment 3 Buovjaga 2021-08-26 08:20:33 UTC
Bibisected with linux-64-7.2 repo to
https://git.libreoffice.org/core/commit/963f252cd1ea9c268a6ced68a3454b10cbee1a89
Qt5/KF5 get rid of unneeded own grahics handling

Adding Cc: to Jan-Marek Glogowski
Comment 4 Commit Notification 2021-08-26 15:58:54 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/923b30aa27ceb377d6a540c012000e89ce5db31e

tdf#144008 Qt5/Kf5 create frames in the GUI thread

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Buovjaga 2021-08-26 17:22:11 UTC
Verified, thanks!

Arch Linux 64-bit
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: a1a83b6b3b4459de353e0cdc8cdf402370c0a5c4
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 26 August 2021
Comment 6 Commit Notification 2021-08-27 03:51:42 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/76cb48b6a00cde41987a1b67b78fee68a133ad53

tdf#144008 Qt5/Kf5 create frames in the GUI thread

It will be available in 7.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2021-09-08 17:28:42 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2-1":

https://git.libreoffice.org/core/commit/51f9e920982e1ef3ac0bb2226b059c0e802642d5

tdf#144008 Qt5/Kf5 create frames in the GUI thread

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.