tdf#144008 Qt5/Kf5 create frames in the GUI thread

There was a 50% chance my pick would have been correct... ok,
just half-true, as in hindsight, I should have preferred the
secure variant using RunInMain to start with.

I thought I could use some templated class functions to get rid
of all the copy and paste, but that looked even more ugly.

P.S. if you wonder - like myself - about the code formatting in
Qt5Instance::CreateFrame: that if from clang-format.

Change-Id: I3a6b0c12c9d71ad8e777ed82526d1515a249832c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121091
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 923b30aa27ceb377d6a540c012000e89ce5db31e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121063
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit 76cb48b6a00cde41987a1b67b78fee68a133ad53)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121568
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>